* What is new in gsl-1.12+:

** The header file gsl_const_cgs.h now emits a warning that it is
   deprecated, applications should use gsl_const_cgsm.h instead.

** The Pochhammer functions gsl_sf_poch(a,x) and gsl_sf_lnpoch(a,x) now
   handle the special cases where a and a+x are zero or negative
   integers.

** The confluent hypergeometric function gsl_sf_hyperg_U (a,b,x) now
   handles some cases where x=0. The case where 1+a-b is a negative
   integer no longer returns an error [bug #22859] and the incorrect
   termination of the series in certain cases is fixed [bug #26706].

** Added a new function gsl_poly_eval_derivs to evaluate a polynomial
   and its derivatives simultaneously.

** Added a new univariate minimisation algorithm
   gsl_min_fminimizer_quad_golden which is a variant of Brent's
   algorithm with safeguarded step-length adjustment.

** Added a new Nelder-Mead minimiser gsl_multimin_fminimizer_nmsimplex2rand
   which uses a randomly oriented simplex rather than one fixed on
   the coordinate axes [bug #25077]

** The texinfo file now uses the dircategory "Software libraries" from
   the Free Software Directory, as recommended in the Texinfo manual.

** The function gsl_ran_exponential now includes zero in its output
   range. [bug #25039]

** All functions for freeing allocated memory now accept a NULL
   pointer, following the standard C convention for free(). [bug
   #25319]

** The function gsl_sum_levin_u_accel now handles the special case
   c_0 + 0 + 0 + 0 + .... that occurs when summing power series
   c_n*x^n with x=0. [bug #26807]

** The functions gsl_linalg_LU_solve, gsl_linalg_LU_svx,
   gsl_linalg_LU_refine, gsl_linalg_LU_invert and their complex
   equivalents now return an error for singular matrices.

** The multifit LMDER hybrid solvers now check the return code of the
   user-supplied function in the gsl_multifit_fdfsolver_set
   method. [bug #26871]

** Improved the implementation of gsl_ran_discrete_preproc to avoid